Fix miscompilation with GCC 4.6
This is 012_all_grub-0.97-gcc46.patch from Gentoo

Signed-off-by: Richard Yao <ryao@cs.stonybrook.edu>

--- a/stage2/Makefile.am
+++ b/stage2/Makefile.am
@@ -90,7 +90,7 @@ else
 GRAPHICS_FLAGS =
 endif
 
-STAGE2_COMPILE = $(STAGE2_CFLAGS) -fno-builtin -nostdinc \
+STAGE2_COMPILE = $(STAGE2_CFLAGS) -fno-reorder-functions -fno-builtin -nostdinc \
 	$(NETBOOT_FLAGS) $(SERIAL_FLAGS) $(HERCULES_FLAGS) $(GRAPHICS_FLAGS)
 
 STAGE1_5_LINK = -nostdlib -Wl,-N -Wl,-Ttext -Wl,2000
